# mimemagic-rs

./: .gitignore  .gitmodules  Cargo.toml  LICENSE-MIT  README.md  rustfmt.toml
mimegen/: Cargo.toml
mimegen/src/: error.rs  errors.rs  lib.rs  main.rs
